current-iptables.txt
# Generated by iptables-save v1.8.11 (nf_tables) on Mon Jul 13 06:18:50 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [228620:95337077]
:LIBVIRT_PRT - [0:0]
-A POSTROUTING -j LIBVIRT_PRT
-A LIBVIRT_PRT -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Mon Jul 13 06:18:50 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Mon Jul 13 06:18:50 2026
*raw
:PREROUTING ACCEPT [279743:222072894]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.18.0.2/32 ! -i br-295caaa6351e -j DROP
-A PREROUTING -d 172.18.0.3/32 ! -i br-295caaa6351e -j DROP
-A PREROUTING -d 172.18.0.5/32 ! -i br-295caaa6351e -j DROP
-A PREROUTING -d 172.18.0.4/32 ! -i br-295caaa6351e -j DROP
-A PREROUTING -d 172.18.0.6/32 ! -i br-295caaa6351e -j DROP
COMMIT
# Completed on Mon Jul 13 06:18:50 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Mon Jul 13 06:18:50 2026
*filter
:INPUT ACCEPT [279748:222058226]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [226754:94996722]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:LIBVIRT_FWI - [0:0]
:LIBVIRT_FWO - [0:0]
:LIBVIRT_FWX - [0:0]
:LIBVIRT_INP - [0:0]
:LIBVIRT_OUT - [0:0]
-A INPUT -j LIBVIRT_INP
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -j LIBVIRT_FWX
-A FORWARD -j LIBVIRT_FWI
-A FORWARD -j LIBVIRT_FWO
-A OUTPUT -j LIBVIRT_OUT
-A DOCKER -d 172.18.0.6/32 ! -i br-295caaa6351e -o br-295caaa6351e -p udp -m udp --dport 53 -j ACCEPT
-A DOCKER -d 172.18.0.6/32 ! -i br-295caaa6351e -o br-295caaa6351e -p tcp -m tcp --dport 53 -j ACCEPT
-A DOCKER -d 172.18.0.5/32 ! -i br-295caaa6351e -o br-295caaa6351e -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER -d 172.18.0.5/32 ! -i br-295caaa6351e -o br-295caaa6351e -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-295caaa6351e -o br-295caaa6351e -p tcp -m tcp --dport 3306 -j ACCEPT
-A DOCKER ! -i br-295caaa6351e -o br-295caaa6351e -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o br-295caaa6351e -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o br-295caaa6351e -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-295caaa6351e -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A LIBVIRT_FWI -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A LIBVIRT_FWO -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWX -i virbr0 -o virbr0 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 68 -j ACCEPT
COMMIT
# Completed on Mon Jul 13 06:18:50 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Mon Jul 13 06:18:50 2026
*nat
:PREROUTING ACCEPT [1211:187791]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [13810:1632190]
:POSTROUTING ACCEPT [13843:1634141]
:DOCKER - [0:0]
:LIBVIRT_PRT - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A PREROUTING -p udp -m udp --dport 53 -j REDIRECT --to-ports 5053
-A PREROUTING -p tcp -m tcp --dport 53 -j REDIRECT --to-ports 5053
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-295caaa6351e -j MASQUERADE
-A POSTROUTING -j LIBVIRT_PRT
-A DOCKER ! -i br-295caaa6351e -p tcp -m tcp --dport 53306 -j DNAT --to-destination 172.18.0.2:3306
-A DOCKER ! -i br-295caaa6351e -p tcp -m tcp --dport 50080 -j DNAT --to-destination 172.18.0.5:80
-A DOCKER ! -i br-295caaa6351e -p tcp -m tcp --dport 50443 -j DNAT --to-destination 172.18.0.5:443
-A DOCKER ! -i br-295caaa6351e -p tcp -m tcp --dport 5053 -j DNAT --to-destination 172.18.0.6:53
-A DOCKER ! -i br-295caaa6351e -p udp -m udp --dport 5053 -j DNAT --to-destination 172.18.0.6:53
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
COMMIT
# Completed on Mon Jul 13 06:18:50 2026
